fix image not fitting on mobile devices

--- a/src/components/EmojiGrid/EmojiGrid.css
+++ b/src/components/EmojiGrid/EmojiGrid.css
@@ -7,3 +7,10 @@
   display: flex;
   flex-direction: row;
 }
+
+@media (max-width: 500px) {
+  .emoji-grid {
+    height: auto !important;
+    width: 100% !important;
+  }
+}
